Fix build error on Linux using clang/trunk

It seems clang trunk cannot distinguish std::bind from bind() in
sys/socket.h. There is no apparent std namespace usage but clang
still complains. This patch resolves the disambiguity.

Task-number: QTBUG-53683
Change-Id: Ib4bbe4a4cdf679fa3314abba5970968d7d8a9857
Reviewed-by: Christian Kandeler <christian.kandeler@theqtcompany.com>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>